Fix one more GSEAL issue

https://bugzilla.gnome.org/show_bug.cgi?id=612472